Update|Add map and footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col col-third">
@@ -118,7 +118,7 @@
                                 <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col col-third">
@@ -128,14 +128,14 @@
                                 <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <!-- <div class="clear"></div> -->
                     </div>
                 </div>
             </div>
-            <!-- Contact section -->
+            <!-- Begin : Contact section -->
             <div class="contact-section">
                 <div class="content-section">
                     <h2 class="section-heading">CONTACT</h2>
@@ -164,16 +164,29 @@
                                             placeholder="Message">
                                     </div>
                                 </div>
-                                <input class="form-submit-btn mt-16" type="submit" value="SEND">
+                                <input class="btn pull-right mt-16" type="submit" value="SEND">
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- End : Contact section -->
+
+            <div class="map-section">
+                <img src="/assets/img/map/map.jpg" alt="map">
+            </div>
         </div>
 
         <div id="footer">
-
+            <div class="socials-list">
+                <a href="#"><i class="ti-facebook"></i></a>
+                <a href="#"><i class="ti-instagram"></i></a>
+                <a href="#"><i class="ti-pinterest"></i></a>
+                <a href="#"><i class="ti-linkedin"></i></a>
+                <a href="#"><i class="ti-twitter"></i></a>
+                <a href="#"><i class="ti-youtube"></i></a>
+            </div>
+            <p class="copyright">Powered by <a href="">w3.css</a></p>
         </div>
 
     </div>
