--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
                 </li>
             </ul>
             <!-- End Nav -->
+
+            <!-- Mobile menu button -->
+            <div id="mobile-menu" class="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
+            </div>
+
             <!-- Begin Search button -->
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
             </div>
             <!-- End Search button -->
 
-            <div id="mobile-menu" class="mobile-menu-btn">
-                <i class="menu-icon ti-menu"></i>
-            </div>
 
         </div>
 
@@ -75,15 +78,15 @@
                     </p>
 
                     <div class="row member-list">
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
@@ -107,7 +110,7 @@
 
                     <!-- Places -->
                     <div class="row places-list">
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -117,7 +120,7 @@
                                 <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place2.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
@@ -127,7 +130,7 @@
                                 <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place3.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
@@ -253,11 +256,15 @@
         // tự động đóng khi chọn menu
 
         var menuItems = document.querySelectorAll('#nav li a[href*="#"]')
-        
-        for (var i=0 ; i < menuItems.length ; i++) {
+        for (var i = 0; i < menuItems.length; i++) {
             var menuItem = menuItems[i];
-            menuItem.onclick = function () {
-                header.style.height = null;
+            menuItem.onclick = function (event) {
+                var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+                if (!isParentMenu) {
+                    header.style.height = null;
+                } else {
+                    event.preventDefault();
+                }
             }
         }
 
