--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                     </p>
 
                     <div class="row member-list">
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                         </div>
@@ -117,7 +117,7 @@
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
@@ -127,7 +127,7 @@
                                 <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
@@ -137,7 +137,7 @@
                                 <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-description">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                 </p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <!-- <div class="clear"></div> -->
@@ -150,19 +150,19 @@
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
                     <div class="row contact-content">
-                        <div class="col col-half contact-info">
+                        <div class="col col-half s-col-full contact-info">
                             <p><i class="ti-location-pin"></i>Chicago, US</p>
                             <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                             <p><i class="ti-email"></i>Email: mail@mail.com</p>
                         </div>
-                        <div class="col col-half contact-form">
+                        <div class="col col-half s-col-full contact-form">
                             <form action="">
                                 <div class="row">
-                                    <div class="col col-half">
+                                    <div class="col col-half s-col-full">
                                         <input type="text" name="" required id="" class="form-control"
                                             placeholder="Name">
                                     </div>
-                                    <div class="col col-half">
+                                    <div class="col col-half s-col-full s-mt-8">
                                         <input type="email" name="" required id="" class="form-control"
                                             placeholder="Email">
                                     </div>
@@ -173,7 +173,7 @@
                                             placeholder="Message">
                                     </div>
                                 </div>
-                                <input class="btn pull-right mt-16" type="submit" value="SEND">
+                                <input class="btn pull-right mt-16 s-full-width" type="submit" value="SEND">
                             </form>
                         </div>
                     </div>
