--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     <div class="row contact-content">
                         <div class="col col-half s-col-full contact-info">
                             <p><i class="ti-location-pin"></i>Chicago, US</p>
-                            <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-                            <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                            <p><i class="ti-mobile"></i>Phone: <a href="tel:+00 151515">+00 151515</a></p>
+                            <p><i class="ti-email"></i>Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
                         </div>
                         <div class="col col-half s-col-full contact-form">
                             <form action="">
@@ -173,7 +173,8 @@
                                             placeholder="Message">
                                     </div>
                                 </div>
-                                <input class="btn pull-right mt-16 s-full-width" type="submit" value="SEND">
+                                <input class="contact-submit-btn btn pull-right mt-16 s-full-width" type="submit"
+                                    value="SEND">
                             </form>
                         </div>
                     </div>
